# e2e_tests

./: pyproject.toml
features/becomeExpert/: become_expert.feature  test_steps.py
